js/src/tests/test262/language/module-code/export-expname-from-as-unpaired-surrogate.js



















$DONOTEVALUATE();

export { "☿" as "\uD83D" } from "./export-expname_FIXTURE.js";
